fix positioning of the scrollbars

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -143,7 +143,7 @@
       font-size: 12px;
       letter-spacing: 0.5px;
       outline: none;
-      padding: 0 15px;
+      padding: 0 0 0 15px;
       -webkit-appearance:none;
       position: relative;
       cursor: pointer;
@@ -395,7 +395,6 @@
           overflow-x: hidden;
           overflow-y: auto;
           list-style: none;
-          margin: 0px 20px 0px;
 
           li {
             padding: 15px 5px;
@@ -531,8 +530,7 @@
 
         ul.media-list {
           list-style: none;
-          margin-left: 20px;
-          margin-right: 20px;
+          padding: 0 20px;
 
           &.media-list-scrollable-tall {
             height: 560px;
@@ -618,12 +616,10 @@
 
       ul.trend-list {
         list-style: none;
-        margin-left: 20px;
-        margin-right: 20px;
+        padding: 0 20px;
 
         li {
           height: 65px;
-          padding: 20px 0;
           border-bottom: 1px solid $dark-blue;
 
           .trend-text {
@@ -1060,7 +1056,6 @@
   &#top_global_issues {
     .main {
       ul.global-issues-list {
-        padding-left: 0px;
         height: 260px;
         overflow-y: auto;
       }
@@ -1079,12 +1074,14 @@
   position: absolute;
   background: $white;
   color: #9b9b9b;
-  font-family: "Avenir-Book";
+  font-family: "Avenir-Book" !important;
   font-size: 12px;
   border-radius: 3px;
   pointer-events: none;
   width: 140px;
   z-index: 1000;
+
+
 
   .chartjs-tooltip-key{
     display:inline-block;
