--- a/app/assets/stylesheets/fifa/components/_trend_list.scss
+++ b/app/assets/stylesheets/fifa/components/_trend_list.scss
@@ -1,7 +1,6 @@
 ul.trend-list {
   list-style: none;
-  margin-left: 20px;
-  margin-right: 20px;
+  padding: 0 20px;
 
   li {
     height: 65px;
